--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-success my-2 my-sm-0 background:red" type="submit">Search</button>
           </form>
         </div>
       </nav>
@@ -56,7 +56,7 @@
                     <h1>Beautiful Headphone</h1>
                     <p>This is the very popular headphone in the world</p>
                     <h1><b>$240</b></h1>
-                    <button><a style="bg-color:red color: white;">Buy now</a></button>
+                    <button class="buy"><a style="bg-color:red color: white;">Buy now</a></button>
             </div>
             <div class="col-md-5"> 
                 <img src="banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -71,7 +71,7 @@
                 <h1>Top reted X-box</h1>
                     <p>This is the very popular X-box in the world</p>
                     <h1><b>$350</b></h1>
-                    <button><a style="bg-color:red color: white;">Buy now</a></button>
+                    <button class="buy"><a style="bg-color:red color: white;">Buy now</a></button>
             </div>
             <div class="col-md-5"> 
                 <img src="banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -84,7 +84,7 @@
                 <h1>Full hd Smart Tv</h1>
                     <p>This is the very popular Tv in the world</p>
                     <h1><b>$1000</b></h1>
-                    <button><a style="bg-color:red color: white;">Buy now</a></button>
+                    <button class="buy"><a >Buy now</a></button>
             </div>
             <div class="col-md-5">      <img src="banner-images/tv.png" class="d-block w-100" alt="...">
             </div>
@@ -102,10 +102,120 @@
   </a>
 </div>
 </div>
-    
+
+<!--this is catagories area here...............................................-->
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="cat1 d-flex justify-content-between align-items-center">
+                <h1>Watch</h1>
+                <img src="categories/watch.png">
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="cat2 d-flex justify-content-between align-items-center">
+                <h1>Bag</h1>
+                <img src="categories/bag.png">
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="cat3 d-flex justify-content-between align-items-center">
+                <h1>Shoe</h1>
+                <img src="categories/shoes.png">
+            </div>
+        </div>
+
+    </div>
+</div>
+<!---this is the juta area........ha ha ha-->
+
+<div class="container shoes" id="shoes">
+    <h3>Shoes</h3>
+    <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="shoes/shoe-1.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Supply 350</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            <h5>#120</h5>
+            <button class="buy">Buy Now >> </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="shoes/shoe-2.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Nike 360</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional.</p>
+            <h5>$320</h5>
+            <button class="buy">Buy Now >> </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="shoes/shoe-3.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Red Airmax</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to.</p>
+            <h5>$350</h5>
+            <button class="buy">Buy Now >> </button>
+          </div>
+        </div>
+      </div>
+
+</div>
 
 
+<div class="container" id="backpack">
+    <h3>Backpack</h3>
+    <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="bags/bag-1.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Red Laltu Bag</h5>
+            <h5>$200</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy">For Buy >> </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="bags/bag-2.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Blue Niltu Bag</h5>
+            <h5>$120</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy">For Buy >> </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="bags/bag-3.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Black Kaltu Bag</h5>
+            <h5>$369</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy">For Buy >> </button>
+          </div>
+        </div>
+      </div>
+</div>
+      <div class="container d-flex align-items-center justify-content-center orange-bg" id="Subscribe">
+         <div>
+            <h3>LET"S Finish Your Questions</h3>
+            <h6>Your Opinion Very Greatfull</h6>
+            <input class="form-control" type="text">
+            <button class="buy">SUBMIT</button>
+         </div>
 
+      </div>
+      <footer>
+        <small> ©2020. All copy rihts by:Md.Abdus Salam. </small>
+      </footer>
 
 
 
